# living_room_monitoring

./: .gitignore  .gitmodules  README.md  conflicts.json  pyproject.toml
data/: kidsAdults_yolo_config.yaml
data/children_and_adults/: data.yaml  data1.yaml
data/distill_20260430/: data.yaml
data/iter_20260423/: data.yaml
data/iter_20260425/: data.yaml
data/iter_20260425/annotations/: instances_train.json  instances_val.json
data/iter_20260429/: data.yaml
data/iter_20260429/annotations/: instances_train.json  instances_val.json
data/sample_1000_20260423/: data.yaml
data/sample_1000_20260423/train/: labels.cache
data/sample_1000_20260423/val/: labels.cache
docs/: distill_training_log_20260430.md  training_scripts_usage.md
runtime/: __init__.py  follow_controller.py
tests/: test_follow_controller.py  test_pretrained_paths.py  test_training_runner_layout.py
tools/: active_learning_sample.py  crawl_baby_images.py  extract_video_frames.py  find_conflicting_labels.py  predict_to_xanylabeling.py  ptz_follow_demo.py  sample_and_predict.py  update_labels_from_xanylabeling.py  video_filter.py  video_inference.py  yolo_sam3_joint_label.py
training/: __init__.py  distill_train.py  evaluate_pseudo_val.py  export_onnx.py  extract_baby.py  generate_pseudo_labels.py  generate_pseudo_labels_v2.py  iter_train.py  predict_to_xanylabeling.py  run_distill.sh  run_distill_v2.sh  sam3_label_sample.py  sample_pack.py  train.py  train.sh  train_deimv2.py  train_deimv2.sh  train_runner.py  train_runner.sh  train_yolov8x.py  yolo2coco.py  yolo_sam3_joint_label.py
(+1331 files in other folders)
